--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
     "@contentful/rich-text-react-renderer": "^15.18.0",
     "@types/react": "^18.2.21",
     "@types/react-dom": "^18.2.7",
-    "astro": "^3.3.0",
+    "astro": "^3.4.0",
     "contentful": "^10.6.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-responsive": "^9.0.2",
+    "react-router-dom": "^6.18.0",
     "zod": "^3.22.3"
   }
 }
